# SimplyAbrechnung

./: .gitignore  AGENTS.md  README.md  SimplyAbrechnung.spec  TODO.md  pyproject.toml  run_simply_abrechnung.py
.github/workflows/: build.yml  pages.yml
Vorlage/: 26-1 Rech.Vordruck XXX .docx  26-6 GOÄ (+Q).docx
assets/icons/: app_icon.icns
docs/: ARCHITECTURE.md  DATA_MODEL.md  MIGRATION.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md  app.js  index.html  styles.css
installer/: SimplyAbrechnung.iss
src/simply_abrechnung/: __init__.py  app.py  billing.py  defaults.py  pdf_invoice.py  storage.py  utils.py
tests/: test_core.py  test_qt_theme.py  test_website.py
