[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simply-abrechnung"
version = "0.4.0"
description = "Einfache lokale Patientenkartei und Rechnungsstellung fuer eine kleine Arztpraxis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["reportlab>=4.2,<5"]

[project.scripts]
simply-abrechnung = "simply_abrechnung.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
